# AegisForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MEMORY.md  README.md  SECURITY.md  pyproject.toml
.aegisforge/events/: error-seeds.jsonl
.aegisforge/lessons/: active.jsonl  snapshot.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  breakthrough-poc-14d.md  problem-map.md  release-playbook.md  roadmap.md
examples/: hermes_mcp_config.json  import_then_distill.py  mcp_setup_example.json  openclaw_mcp_config.json  sdk_agent_loop.py
scripts/: preflight.sh  release_gate.sh
src/aegisforge/: __init__.py  benchmark_pack.py  causal_lane.py  cli.py  core.py  dream_mode.py  llm_extract.py  log_import.py  mcp_server.py  quality.py  recovery_graph.py  retry_policy.py  safety_gate.py  sdk.py  storage.py
tests/: test_contracts.py  test_core.py  test_hermes_integration.py  test_sdk.py
