[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisforge"
version = "0.4.0"
description = "Agent Reliability OS — SDK, MCP server, causal memory, safety gate, recovery learning"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
aegisforge = "aegisforge.cli:main"
aegisforge-mcp = "aegisforge.mcp_server:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
all = ["mcp>=1.0"]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0",
  "mypy>=1.10.0",
  "build>=1.2.2",
  "twine>=5.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
ignore = ["E741"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = ["src", "examples"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
